# JobScraper

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.github-actions.md  README.local.md  README.md  filters.json  job_fit_evaluator.py  job_scraper_config.py  keywords.txt  linkedin_job_scraper.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_job_pipeline.py
.github/workflows/: README.md  ci.yml  jobs.yml
configs/: README.md  filters.json  keywords.example.txt
cv/: master_cv.example.tex  master_cv.tex
prompts/: master_prompt.example.txt  master_prompt.txt
scripts/: README.md  evaluate_jobs.py  run_pipeline.py  scrape_jobs.py
src/jobfinder/: README.md  __init__.py  config_files.py  env.py  google_sheets.py  paths.py
src/jobfinder/dedupe/: README.md  __init__.py  matching.py  merge.py  models.py  normalize.py  scoring.py
src/jobfinder/evaluator/: README.md  cli.py  models.py  openai_client.py  parsing.py  service.py  storage.py
src/jobfinder/operations/: README.md  __init__.py  reports.py
src/jobfinder/pipeline/: README.md  (+2 more)
src/jobscraper/: __init__.py  config_files.py  env.py  google_sheets.py  paths.py
tests/: README.md  test_config_files.py  test_dedupe_matching.py  test_evaluator_cli.py  test_evaluator_openai_client.py  test_evaluator_parsing.py  test_evaluator_storage.py  test_google_sheets.py  test_indeed_provider.py  test_pipeline_cli.py  test_scraper_export_rows.py  test_scraper_filters.py  test_scraper_normalize.py  test_scraper_run_history.py  test_scraper_search.py  test_scraper_settings.py  test_stepstone_provider.py
(+44 files in other folders)
